Fixed serious style problem on firefox browser shadow dom doesn't work on firefox...

--- a/src/content/display/style/display.styl
+++ b/src/content/display/style/display.styl
@@ -27,18 +27,22 @@
 	padding: 2%;
 	display: flex;
 	justify-content: space-between;
-	align-items: center;
+	justify-items: center;
 	background: light-primary;
 	flex-grow: 0;
 	flex-shrink: 0;
 	overflow: hidden;	
 
-	.icon{
+	.edge-translate-icon{
 		fill: white;
 
 		:hover {
 			fill: #ddd;
 		}
+	}
+
+	.icon-fix{    
+		display: none;
 	}
 
 	#heading-icon{
